# rogerplayer

./: .gitignore  Cargo.toml  README.md  agent.md
.claude/: settings.local.json
assets/: AppIcon.icns
scripts/: build-all.sh  build-app.sh
src/: alloc.rs  lib.rs  main.rs
src/audio/: format.rs  mod.rs  output.rs  ring_buffer.rs  stats.rs  timing.rs
src/decode/: decoder.rs  mod.rs
src/engine/: mod.rs
src/resample/: mod.rs
src/tui/: controller.rs  mod.rs  model.rs  view.rs
